OpenVDB Points Version History
==============================

Version 0.1.0 - October 1, 2015

    Core API:
    - AttributeArray and AttributeSet classes for storing and managing
      attribute data.
    - Extended tree::LeafNode to hold attribute data as new
      tools::PointDataLeafNode and introduced tools::PointDataTree and
      tools::PointDataGrid specialisations.
    - Added a PointConversion tool to convert arbitrary point data arrays
      into PointDataGrids and extensible framework to provide custom
      structures for conversion.
    - Added a vdb_print command-line application that matches OpenVDB's
      vdb_print, but with extensions to output point information.

    Houdini:
    - Added an OpenVDB Points SOP for converting point data back-and-forth
      between native Houdini points and OpenVDB Points.
    - A SOP base class that adds middle-click information to OpenVDB Points
      SOPs.
    - A custom GR primitive for rendering OpenVDB Points natively in the
      Houdini viewport.

Version 0.2.0 - In Development

    Core API:
    - Added a new TopologyCopy constructor for PointDataLeafNode to precisely
      match those provided by OpenVDB Leaf nodes (contributed by ILM)

    Clarisse:
    - New Isotropix Clarisse ray-tracing module introduced to provide native
      geometry ray-tracing.